Implements HW_10